make first animation

--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
 	<div class="road">
 	</div>
 	<img src="./images/car.png" class="car">
-	<img src="./images/tree1.png" class="tree tree1">
-	<img src="./images/tree3.png" class="tree tree2">
+	<img src="./images/tree1.png" class="tree tree1"> 
+	<!-- <img src="./images/tree3.png" class="tree tree2">
 	<img src="./images/tree2.png" class="tree tree3">
 	<img src="./images/tree3.png" class="tree tree4">
 	<img src="./images/tree2.png" class="tree tree5">
-	<img src="./images/tree1.png" class="tree tree6">
-	<button type="button" class="btn"><img src="./images/pause.png" alt=""></button>
+	<img src="./images/tree1.png" class="tree tree6">  -->
+	<button type="button" class="btn">
+		<img class="pause" src="./images/pause.png" alt="">
+		<img class="play" src="./images/play.png" alt="">
+	
+	</button>
 
 	<!-- <img src="./images/arrow.png" class="arrow" alt="">
 	<img src="./images/danger.png" class="danger" alt="">
