--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
 </head>
 
 <body>
+	<div class="speed">
+		<h2>Speed</h2>
+		<input type="number"value="3" min="1">
+	</div>
 	<div class="road">
 	</div>
-	<img src="./images/car.png" class="car">
-	<img src="./images/tree1.png" class="tree tree1"> 
-	<!-- <img src="./images/tree3.png" class="tree tree2">
-	<img src="./images/tree2.png" class="tree tree3">
-	<img src="./images/tree3.png" class="tree tree4">
-	<img src="./images/tree2.png" class="tree tree5">
-	<img src="./images/tree1.png" class="tree tree6">  -->
+	<img src="./images/car.png" class="car" >
+	<img src="./images/tree1.png" class="tree tree1" id="1"> 
+	<img src="./images/tree3.png" class="tree tree2" id="2">
+	<img src="./images/tree2.png" class="tree tree3" id="3">
+	<img src="./images/tree3.png" class="tree tree4" id="4">
+	<img src="./images/tree2.png" class="tree tree5" id="5">
+	<img src="./images/tree1.png" class="tree tree6" id="6"> 
 	<button type="button" class="btn">
 		<img class="pause" src="./images/pause.png" alt="">
 		<img class="play" src="./images/play.png" alt="">
