add modal finishGame

--- a/index.html
+++ b/index.html
@@ -24,7 +24,16 @@
       <img class="pause" src="./images/pause.png" alt="" />
       <img class="play" src="./images/play.png" alt="" />
     </button>
-
+    <div class="score">
+      Score:
+      <div>0</div>
+    </div>
+    <div class="backdrop">
+      <div class="backdrop-container">
+        <p class="finish-text">Final Score: <span>0</span></p>
+        <button type="button" class="restart-button">Play Again</button>
+      </div>
+    </div>
     <img src="./images/arrow.png" class="arrow" alt="" />
     <img src="./images/danger.png" class="danger" alt="" />
     <img src="./images/coin.png" class="coin" alt="" />
