separate js logic

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
     <img src="./images/arrow.png" class="arrow" alt="" />
     <img src="./images/danger.png" class="danger" alt="" />
     <img src="./images/coin.png" class="coin" alt="" />
-    <script src="script.js"></script>
+    <script type="module" src="./js/constants.js"></script>
+    <script type="module" src="./js/ElementInfo.js"></script>
+    <script type="module" src="./js/getCoordinates.js"></script>
+    <script type="module" src="./js/animations.js"></script>
+    <script type="module" src="./js/gameLogic.js"></script>
+    <script type="module" src="./js/eventHandlers.js"></script>
   </body>
 </html>
